--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ I’m always excited to collaborate on innovative solutions and contribute to im
       <div class="resume-wrap ftco-animate">
         <span class="date">IBM Java Course</span>
         <h2>Java</h2>
-        <span>15th May 2022 to 15th June 2022</span>
+        <span>1st Mar 2022 to 1st Sep 2022</span>
         <p class="mt-4">
           Java training focused on real-world projects, helping students strengthen coding and problem-solving skills.
         </p>
