Update QR-Generator project link in index.html

--- a/index.html
+++ b/index.html
@@ -493,11 +493,11 @@ I’m always excited to collaborate on innovative solutions and contribute to im
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/image3.png');">
+              <a href="https://github.com/anilg199/QR-Generator" class="block-20 zoom-effect" style="background-image: url('images/image3.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">QR-Generator Project for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/anilg199/QR-Generator">QR-Generator Project for Beginners</a></h3>
                 <p>Created a simple QR Code generator using HTML, CSS to encode URLs and text efficiently.</p>
               </div>
             </div>
